[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "certmesh"
version = "3.0.10"
description = "Multi-provider TLS certificate lifecycle management — DigiCert, Venafi TPP, Vault PKI, ACM, Let's Encrypt"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dejan Gregor", email = "sreengineer@users.noreply.github.com" },
]
maintainers = [
    { name = "Dejan Gregor", email = "sreengineer@users.noreply.github.com" },
]
keywords = [
    "tls",
    "certificate",
    "pki",
    "ssl",
    "x509",
    "digicert",
    "venafi",
    "vault",
    "acm",
    "letsencrypt",
    "acme",
    "kubernetes",
    "helm",
    "devops",
    "security",
    "certificate-management",
    "automation",
    "cloud-native",
    "infrastructure",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
    "Topic :: Internet",
    "Topic :: Utilities",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
]

dependencies = [
    "requests>=2.31.0",
    "tenacity>=8.2.0",
    "hvac>=2.1.0",
    "cryptography>=41.0.0",
    "PyYAML>=6.0.1",
    "boto3>=1.28.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "pyjwt[crypto]>=2.8.0",
    "prometheus-client>=0.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "slowapi>=0.1.9",
    "python-json-logger>=2.0.0",
    "acme>=2.0.0",
    "josepy>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
    "freezegun>=1.3.0",
    "moto[acm,acm-pca,iam,sts,secretsmanager]>=4.2.0",
    "ruff>=0.4.0",
    "pytest-asyncio>=0.23.0",
]
integration = [
    "vcert>=0.17.0",
]

[project.scripts]
certmesh = "certmesh.cli:main"

[project.urls]
Homepage = "https://github.com/SCGIS-Wales/certmesh"
Repository = "https://github.com/SCGIS-Wales/certmesh"
Issues = "https://github.com/SCGIS-Wales/certmesh/issues"
Documentation = "https://github.com/SCGIS-Wales/certmesh#readme"
Changelog = "https://github.com/SCGIS-Wales/certmesh/releases"

# ---------------------------------------------------------------------------
# hatch
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/certmesh"]

[tool.hatch.build.targets.sdist]
include = ["src/certmesh/", "tests/", "README.md", "LICENSE", "pyproject.toml"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "SIM108", # ternary not always clearer
    "SIM117", # nested with statements can be clearer in tests
    "TC001",  # move application import into type-checking block
    "TC002",  # move third-party import into type-checking block
    "TC003",  # move stdlib import into type-checking block
    "RUF043", # raw strings in match patterns - overly strict for tests
    "B008",   # Depends() in function defaults is standard FastAPI pattern
]

[tool.ruff.lint.isort]
known-first-party = ["certmesh"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers -m 'not integration'"
markers = [
    "integration: integration tests requiring external services (deselect with '-m not integration')",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["certmesh"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
